# naptools

./: .gitignore  README.md  contour_plot.py  errors.py  pyproject.toml  setup.py
prettyplots/: __init__.py  contour_plot_new.py  error_plot.py  errors.py  plot.py  tests.py
prettyplots/test_data/: errors_p1.csv  errors_p2.csv  errors_p3.csv  errors_p4.csv
src/: contour_plot.py  error_plot.py
src/naptools/: __init__.py  contour_plot.py  contour_plot_new.py  default_style.mplstyle  error_plot.py  line_styles.py  new_error_plot.py  new_plot.py  plot.py  plotter.py  power.py  stream_plot.py  utils.py
tests/: contour_tests.py  tests.py
tests/data/: p_refinement_errors.csv  u_0002.csv  u_0005.csv
