[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "naptools"
version = ""
authors = [
  { name="alextrenam", email="alextrenam@gmail.com" },
]
description = ""
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/alextrenam/naptools"
Issues = "https://github.com/alextrenam/naptools/issues"
